[gd_scene load_steps=10 format=3 uid="uid://ddepc2hkfjkx1"]

[ext_resource type="Script" path="res://Scripts/enemies/projectile.gd" id="1_xkup1"]
[ext_resource type="Texture2D" uid="uid://dohbc7bcrm75g" path="res://Assets/Sprites/Enemies/projectile-red.png" id="2_eixo1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ans3k"]
atlas = ExtResource("2_eixo1")
region = Rect2(8, 0, 4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvm7u"]
atlas = ExtResource("2_eixo1")
region = Rect2(12, 0, 4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiks1"]
atlas = ExtResource("2_eixo1")
region = Rect2(16, 0, 4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctld4"]
atlas = ExtResource("2_eixo1")
region = Rect2(0, 0, 4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fnxg"]
atlas = ExtResource("2_eixo1")
region = Rect2(4, 0, 4, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_jrg6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ans3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvm7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiks1")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctld4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fnxg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6h67o"]
radius = 1.0

[node name="Projectile" type="Area2D"]
z_index = 1
collision_layer = 76
collision_mask = 19
script = ExtResource("1_xkup1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jrg6f")
animation = &"idle"
autoplay = "idle"

[node name="BulletCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6h67o")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
